--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^6.0.0",
     "boxicons": "^2.1.4",
     "firebase": "^11.6.1",
+    "framer-motion": "^12.12.1",
     "jsonwebtoken": "^9.0.2",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
@@ -22,6 +23,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
     "rehype-raw": "^7.0.0",
     "rehype-react": "^8.0.0",
