--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "boxicons": "^2.1.4",
+    "clsx": "^2.1.1",
     "firebase": "^11.6.1",
     "framer-motion": "^12.12.1",
     "jsonwebtoken": "^9.0.2",
@@ -28,6 +29,7 @@
     "rehype-raw": "^7.0.0",
     "rehype-react": "^8.0.0",
     "swiper": "^11.2.10",
+    "tailwind-merge": "^3.3.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
