--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^11.6.1",
     "framer-motion": "^12.12.1",
     "jsonwebtoken": "^9.0.2",
+    "lenis": "^1.3.8",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
